# coach-owl

./: .env.example  .gitignore  CoachOwl-Execution-Plan-v0.md  CoachOwl-PRD-v0.md  README.md  docker-compose.yml
api/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 0001_initial_schema.py  0002_add_student_minor_dob.py
api/app/: main.py
api/app/ai/: __init__.py  import_parser.py  llm.py  note_structurer.py
api/app/core/: config.py  db.py  deps.py  errors.py  security.py
api/app/models/: __init__.py  _types.py  billing.py  credits.py  enums.py  import_jobs.py  lesson_notes.py  notifications.py  organization.py  scheduling.py  share_links.py  student.py  user.py
api/app/notifications/: __init__.py  dispatcher.py  hooks.py  processor.py  templates.py
api/app/schemas/: auth.py  common.py  compliance.py  credits.py  guardians.py  imports.py  invoices.py  lesson_notes.py  notifications.py  org.py  payments.py  scheduling.py  share_links.py  students.py
api/app/services/: __init__.py  compliance.py  credits.py  guardians.py  imports.py  invoices.py  lesson_notes.py  (+5 more)
api/scripts/: export_openapi.py
api/tests/: conftest.py  test_auth.py  test_compliance.py  test_credits.py  test_email_resend.py  test_guardians.py  test_import_parser.py  test_imports.py  test_invoices.py  test_lesson_notes.py  test_linkages.py  test_llm.py  test_localization.py  test_notifications.py  test_payments.py  test_scheduling.py  test_share_links.py  test_students.py  test_tenant_isolation.py
(+136 files in other folders)
